<resources>
    <string name="app_name">检测系统</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_homepage">首页</string>
    <string name="menu_video">视频</string>
    <string name="menu_enter">录入</string>
    <string name="menu_query">查询</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>

    <string name="enter_id_title">ID:</string>
    <string name="enter_id_prompt">请输入ID号</string>
    <string name="enter_purchase_date">采购日期:</string>
    <string name="enter_purchase_date_prompt">请输入采购日期</string>
    <string name="enter_purchase_price">采购价格:</string>
    <string name="enter_purchase_price_prompt">请输入采购价格</string>
    <string name="enter_purchase_unit">采购单位:</string>
    <string name="enter_purchase_unit_prompt">请输入采购单位</string>
    <string name="enter_contact">联系人:</string>
    <string name="enter_contact_prompt">请输入联系人</string>
    <string name="enter_telephone">联系电话:</string>
    <string name="enter_telephone_prompt">请输入联系电话</string>
    <string name="enter_purchase_weight">体重:</string>
    <string name="enter_purchase_weight_prompt">请输入体重(kg)</string>
    <string name="enter_color">颜色:</string>
    <string name="enter_color_prompt">请输入颜色</string>
    <string name="enter_vaccination_status">接种情况:</string>
    <string name="enter_vaccination_status_prompt">请选择疫苗接种情况</string>
    <string name="enter_vaccination_date">接种时间:</string>
    <string name="enter_vaccination_date_prompt">请输入疫苗接种时间</string>
    <string name="enter_note_title">备注:</string>
    <string name="enter_note_prompt">请输入备注</string>

</resources>