<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_homepage"
            android:icon="@drawable/ic_homepage_black_24dp"
            android:title="@string/menu_homepage" />
        <item
            android:id="@+id/nav_video"
            android:icon="@drawable/ic_video_black_24dp"
            android:title="@string/menu_video" />
        <item
            android:id="@+id/nav_enter"
            android:icon="@drawable/ic_enter_black_24dp"
            android:title="@string/menu_enter" />
        <item
            android:id="@+id/nav_query"
            android:icon="@drawable/ic_query_black_24dp"
            android:title="@string/menu_query" />
    </group>
</menu>