<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_homepage">

    <fragment
        android:id="@+id/nav_homepage"
        android:name="com.example.livestockweightandtempims.ui.homepage.HomepageFragment"
        android:label="@string/menu_homepage"
        tools:layout="@layout/homepage_transform" />

    <fragment
        android:id="@+id/nav_video"
        android:name="com.example.livestockweightandtempims.ui.video.VideoFragment"
        android:label="@string/menu_video"
        tools:layout="@layout/fragment_video" />

    <fragment
        android:id="@+id/nav_enter"
        android:name="com.example.livestockweightandtempims.ui.enter.EnterFragment"
        android:label="@string/menu_enter"
        tools:layout="@layout/fragment_enter" />

    <fragment
        android:id="@+id/nav_query"
        android:name="com.example.livestockweightandtempims.ui.query.QueryFragment"
        android:label="@string/menu_query"
        tools:layout="@layout/fragment_query" />
</navigation>