<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.enter.EnterFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_enter_id"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:textSize="25dp"
            android:gravity="center"
            android:text="@string/enter_id_title" />

        <EditText
            android:id="@+id/et_enter_id"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:textSize="25dp"
            android:gravity="center"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/enter_id_prompt"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_enter_purchase_date"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:textSize="25dp"
            android:gravity="center"
            android:text="@string/enter_purchase_date" />

        <EditText
            android:id="@+id/et_enter_purchase_date"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:textSize="25dp"
            android:gravity="center"
            android:ems="10"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:hint="@string/enter_purchase_date_prompt" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_enter_purchase_price"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:textSize="25dp"
            android:gravity="center"
            android:text="@string/enter_purchase_price" />

        <EditText
            android:id="@+id/et_enter_purchase_price"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:textSize="25dp"
            android:gravity="center"
            android:ems="10"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:hint="@string/enter_purchase_price_prompt" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_enter_purchase_unit"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:textSize="25dp"
            android:gravity="center"
            android:text="@string/enter_purchase_unit" />

        <EditText
            android:id="@+id/et_enter_purchase_unit"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:textSize="25dp"
            android:gravity="center"
            android:ems="10"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:hint="@string/enter_purchase_unit_prompt" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_enter_contact"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:textSize="25dp"
            android:gravity="center"
            android:text="@string/enter_contact" />

        <EditText
            android:id="@+id/et_enter_contact"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:textSize="25dp"
            android:gravity="center"
            android:ems="10"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:hint="@string/enter_contact_prompt" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_enter_telephone"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:textSize="25dp"
            android:gravity="center"
            android:text="@string/enter_telephone" />

        <EditText
            android:id="@+id/et_enter_telephone"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:textSize="25dp"
            android:gravity="center"
            android:ems="10"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:hint="@string/enter_telephone_prompt" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_enter_purchase_weight"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:textSize="25dp"
            android:gravity="center"
            android:text="@string/enter_purchase_weight" />

        <EditText
            android:id="@+id/et_enter_purchase_weight"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:textSize="25dp"
            android:gravity="center"
            android:ems="10"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:hint="@string/enter_purchase_weight_prompt" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_enter_color"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:textSize="25dp"
            android:gravity="center"
            android:text="@string/enter_color" />

        <EditText
            android:id="@+id/et_enter_color"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:textSize="25dp"
            android:gravity="center"
            android:ems="10"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:hint="@string/enter_color_prompt" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_enter_vaccination_status"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:textSize="25dp"
            android:gravity="center"
            android:text="@string/enter_vaccination_status" />

        <Spinner
            android:id="@+id/spinner_enter_vaccination_status"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:background="@drawable/border"
            android:entries="@array/spinner"
            style="@style/SpinnerStyle"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_enter_vaccination_date"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:textSize="25dp"
            android:gravity="center"
            android:text="@string/enter_vaccination_date" />

        <EditText
            android:id="@+id/et_enter_vaccination_date"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:textSize="25dp"
            android:gravity="center"
            android:ems="10"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:hint="@string/enter_vaccination_date_prompt" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="30dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_enter_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:textSize="25dp"
            android:gravity="left"
            android:text="@string/enter_note_title" />

        <EditText
            android:id="@+id/et_enter_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:textSize="25dp"
            android:gravity="top|left"
            android:ems="15"
            android:inputType="textMultiLine"
            android:minHeight="48dp"
            android:hint="@string/enter_note_prompt" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/menu_enter" />


</LinearLayout>